--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,7 +60,7 @@ h6 {
 # Sections & Section Header
 --------------------------------------------------------------*/
 section {
-  padding: 80px 0;
+  padding: 70px 0;
   overflow: hidden;
 }
 
@@ -937,6 +937,48 @@ section {
 .car-info .buy-btn:hover {
   background: var(--color-primary);
   color: #fff;
+}
+
+
+/* ---------------------------- */
+
+.phone-div {
+  min-height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.phone-itself {
+  text-align: center;
+  font-weight: 700;
+}
+
+.phone-itself:hover {
+  background-color: var(--color-secondary);
+  color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+
+/* .phone-img.div {
+  background-image: url(/assets/img/quote-bg.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+} */
+
+.phone-img-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.phone-img-itself {
+  display: block;
+  margin: 0 auto;
+  width: 90%;
+  height: 90%;
 }
 
 /* MINE */
