--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -781,13 +781,13 @@ section {
 }
 
 .services .card a {
-  color: #001973;
+  /* color: #001973; */
   transition: 0.3;
 }
 
-.services .card a:hover {
+/* .services .card a:hover {
   color: var(--color-primary);
-}
+} */
 
 .services .card p {
   padding: 0 30px;
@@ -898,7 +898,7 @@ section {
 }
 
 .car-info {
-  padding-left: 30px;
+  padding: 0 0 20px 30px;
 }
 
 .car-info ul {
@@ -923,6 +923,8 @@ section {
 
 .car-info .buy-btn {
   display: block;
+  width: 160px;
+  background: #eaeeec;
   padding: 12px 35px;
   border-radius: 4px;
   color: var(--color-primary);
@@ -930,7 +932,6 @@ section {
   font-size: 16px;
   font-weight: 500;
   font-family: var(--font-primary);
-  transition: 0.3s;
   border: 1px solid var(--color-primary);
 }
 
@@ -938,6 +939,8 @@ section {
   background: var(--color-primary);
   color: #fff;
 }
+
+
 
 
 /* ---------------------------- */
