--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -646,7 +646,7 @@ section {
 
 .about .content ul li {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   margin-top: 40px;
 }
 
