--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -948,13 +948,18 @@ section {
 .phone-div {
   min-height: 80px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .phone-itself {
+  display: block;
+  margin-bottom: 15px;
   text-align: center;
   font-weight: 700;
+  cursor: pointer;
+
 }
 
 .phone-itself:hover {
