--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -946,7 +946,6 @@ section {
 }
 
 /* ---------------------------- */
-
 .phone-div {
   min-height: 80px;
   display: flex;
@@ -979,14 +978,23 @@ section {
 .phone-img-itself {
   display: block;
   margin: 0 auto;
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  /* height: 90%; */
 }
 
 .hero-img {
   border-radius: 20px;
   filter: brightness(85%);
 }
+
+/* City */
+.ul-city {
+  margin-right: 20px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+
 
 /* MINE */
 
